--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikcraft</title>
-  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade,  feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
+  <meta name="description" content="Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.">
 
   <link rel="stylesheet" href="./assets/css/style.css">
 </head>
@@ -27,6 +27,19 @@
       </nav>
     </div>
   </header>
+
+  <main class="introducao-bg">
+    <div class="introducao">
+      <div class="introducao-conteudo">
+        <h1>Bicicletas feitas sob medida<span>.</span></h1>
+        <p>Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para o cliente. Explore o mundo na sua velocidade com a Bikcraft.</p>
+        <a href="./bicicletas.html">Escolha a sua</a>
+      </div>
+      <div>
+        <img src="./assets/img/fotos/introducao.jpg" alt="Bicicleta elétrica preta.">
+      </div>
+    </div>
+  </main>
 </body>
 
 </html>
