--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contato | Bikcraft</title>
   <meta name="description" content="Contato">
+  <link rel="preload" href="./assets/css/style.css" as="style">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./assets/img/bikcraft.svg" alt="Bikcraft">
+        <img src="./assets/img/bikcraft.svg" width="136" height="16" alt="Bikcraft">
       </a>
 
       <nav aria-label="primaria">
@@ -53,13 +54,13 @@
         </address>
         <div class="contato-redes">
           <a href="./">
-            <img src="./assets/img/redes/instagram-p.svg" alt="Instagram">
+            <img src="./assets/img/redes/instagram-p.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./assets/img/redes/facebook-p.svg" alt="Facebook">
+            <img src="./assets/img/redes/facebook-p.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./assets/img/redes/youtube-p.svg" alt="Youtube">
+            <img src="./assets/img/redes/youtube-p.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </section>
@@ -90,7 +91,7 @@
   <article class="lojas container">
     <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</span></h2>
     <div class="lojas-item">
-      <img src="./assets/img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
+      <img src="./assets/img/lojas/rj.jpg" width="1120" height="520" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
       <div class="lojas-conteudo">
         <h3 class="font-1-xl">Rio de Janeiro</h3>
         <div class="lojas-dados font-2-s cor-8">
@@ -101,12 +102,12 @@
           <a href="mailto:rio@bikcraft.com">rio@bikcraft.com</a>
           <a href="tel:+5521999999999">+55 21 99999-9999</a>
         </div>
-        <p class="lojas-tempo font-1-s"><img src="./assets/img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        <p class="lojas-tempo font-1-s"><img src="./assets/img/icones/horario.svg" width="20" height="20" alt=""> 08-18h de seg à dom</p>
       </div>
     </div>
 
     <div class="lojas-item">
-      <img src="./assets/img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
+      <img src="./assets/img/lojas/rj.jpg" width="1120" height="520" alt="mapa marcando o endereço em Rua Ali Perto, 25 - São Paulo - SP">
       <div class="lojas-conteudo">
         <h3 class="font-1-xl">São Paulo</h3>
         <div class="lojas-dados font-2-s cor-8">
@@ -117,14 +118,14 @@
           <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
           <a href="tel:+5511999999999">+55 11 99999-9999</a>
         </div>
-        <p class="lojas-tempo font-1-s"><img src="./assets/img/icones/horario.svg" alt=""> 08-18h de seg à dom</p>
+        <p class="lojas-tempo font-1-s"><img src="./assets/img/icones/horario.svg" width="20" height="20" alt=""> 08-18h de seg à dom</p>
       </div>
     </div>
   </article>
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./assets/img/bikcraft.svg" alt="Bikcraft">
+      <img src="./assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -135,13 +136,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="./assets/img/redes/instagram.svg" alt="Instagram">
+            <img src="./assets/img/redes/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./assets/img/redes/facebook.svg" alt="Facebook">
+            <img src="./assets/img/redes/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./assets/img/redes/youtube.svg" alt="Youtube">
+            <img src="./assets/img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
