--- a/seguros.html
+++ b/seguros.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Seguros | Bikcraft</title>
   <meta name="description" content="Seguros de nossas bicicletas.">
+  <link rel="preload" href="./assets/css/style.css" as="style">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./assets/img/bikcraft.svg" alt="Bikcraft">
+        <img src="./assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       </a>
 
       <nav aria-label="primaria">
@@ -72,32 +73,32 @@
       <h2 class="font-1-xxl cor-0">vantagens<span class="cor-p1">.</span></h2>
       <ul>
         <li>
-          <img src="./assets/img/icones/eletrica.svg" alt="">
+          <img src="./assets/img/icones/eletrica.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Reparo Elétrico</h3>
           <p class="font-2-s cor-5">Garantimos o reparo completo do seu motor em caso de falhas. Sabemos que falhas são raras, mas estamos aqui para caso ocorra.</p>
         </li>
         <li>
-          <img src="./assets/img/icones/carbono.svg" alt="">
+          <img src="./assets/img/icones/carbono.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Reparo de Quadro</h3>
           <p class="font-2-s cor-5">Nossos quadros são feitos para durar para sempre. Mas caso algo ocorra, ficamos felizes em reparar.</p>
         </li>
         <li>
-          <img src="./assets/img/icones/sustentavel.svg" alt="">
+          <img src="./assets/img/icones/sustentavel.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Sustentável</h3>
           <p class="font-2-s cor-5">Trabalhamos com a filosofia de desperdício zero. Qualquer parte defeituosa é reciclada e reutilizada em outro projeto.</p>
         </li>
         <li>
-          <img src="./assets/img/icones/rastreador.svg" alt="">
+          <img src="./assets/img/icones/rastreador.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Recuperação</h3>
           <p class="font-2-s cor-5">Recuperamos Bikcrafts roubadas sem custo adicional para o dono. Se não conseguirmos recuperar, damos uma nova para você.</p>
         </li>
         <li>
-          <img src="./assets/img/icones/seguro.svg" alt="">
+          <img src="./assets/img/icones/seguro.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Segurança</h3>
           <p class="font-2-s cor-5">O nosso seguro garante que todo reparo seja feito com peças genuínas e de alta qualidade. Confie na Bikcraft.</p>
         </li>
         <li>
-          <img src="./assets/img/icones/velocidade.svg" alt="">
+          <img src="./assets/img/icones/velocidade.svg" width="32" height="32" alt="">
           <h3 class="font-1-l cor-0">Rapidez</h3>
           <p class="font-2-s cor-5">A sua Bikcraft ficará pronta para uso no mesmo dia, caso você traga ela para ser reparada em uma das filiais.</p>
         </li>
@@ -111,38 +112,38 @@
     <dl>
       <div>
         <dt class="font-1-m-b">Qual a forma de pagamento vocês aceitam?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard,  ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
         <dt class="font-1-m-b">Como posso entrar em contato?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard,  ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
         <dt class="font-1-m-b">Vocês possuem algum desconto?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard,  ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
         <dt class="font-1-m-b">Qual a garantia que possuo?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard,  ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
         <dt class="font-1-m-b">Posso parcelar no boleto?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard,  ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
         <dt class="font-1-m-b">Quantas trocas posso fazer ao ano?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard,  ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
       </div>
       <div>
         <dt class="font-1-m-b">Qual Bikcraft devo escolher para o meu tamanho?</dt>
-        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard,  ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
+        <dd class="font-2-s cor-9">Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitamos PIX e Boleto através do PagSeguro.</dd>
       </div>
     </dl>
   </article>
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./assets/img/bikcraft.svg" alt="Bikcraft">
+      <img src="./assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -153,13 +154,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="./assets/img/redes/instagram.svg" alt="Instagram">
+            <img src="./assets/img/redes/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./assets/img/redes/facebook.svg" alt="Facebook">
+            <img src="./assets/img/redes/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./assets/img/redes/youtube.svg" alt="Youtube">
+            <img src="./assets/img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
