--- a/termos.html
+++ b/termos.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Termos e Condições | Bikcraft</title>
   <meta name="description" content="Termos e condições.">
+  <link rel="preload" href="./assets/css/style.css" as="style">
   <link rel="stylesheet" href="./assets/css/style.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -17,7 +18,7 @@
   <header class="header-bg">
     <div class="header container">
       <a href="./">
-        <img src="./assets/img/bikcraft.svg" alt="Bikcraft">
+        <img src="./assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       </a>
 
       <nav aria-label="primaria">
@@ -56,7 +57,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./assets/img/bikcraft.svg" alt="Bikcraft">
+      <img src="./assets/img/bikcraft.svg" width="136" height="32" alt="Bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">Contato</h3>
         <ul class="font-2-m cor-5">
@@ -67,13 +68,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="./assets/img/redes/instagram.svg" alt="Instagram">
+            <img src="./assets/img/redes/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./assets/img/redes/facebook.svg" alt="Facebook">
+            <img src="./assets/img/redes/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./assets/img/redes/youtube.svg" alt="Youtube">
+            <img src="./assets/img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
