--- a/bicicletas/nebula.html
+++ b/bicicletas/nebula.html
@@ -10,11 +10,11 @@
   <meta name="description" content="Nebula Cosmic">
 
   <link rel="icon" href="../favicon.svg" type="image/svg+xml">
-  <link rel="stylesheet" href="../assets/css/style.css">
+  <link rel="stylesheet" href="../assets/css/style.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
-  
+
   <script>document.documentElement.classList.add("js");</script>
 </head>
 
