--- a/orcamento.html
+++ b/orcamento.html
@@ -9,9 +9,9 @@
   <meta name="description" content="Orçamento.">
 
   <link rel="icon" href="./favicon.svg" type="image/svg+xml">
-  <link rel="preload" href="./assets/css/style.css" as="style">
-  <link rel="stylesheet" href="./assets/css/style.css">
-  
+  <link rel="preload" href="./assets/css/style.min.css" as="style">
+  <link rel="stylesheet" href="./assets/css/style.min.css">
+
   <script>document.documentElement.classList.add("js");</script>
 </head>
 
